--- a/templates/core/buscador.html
+++ b/templates/core/buscador.html
@@ -66,6 +66,7 @@
 {% block custom_scripts %}
 <script src="http://openlayers.org/api/OpenLayers.js"></script>
 <script type="text/javascript" src="/media/js/bootstrap-typeahead-gist2204728.js"></script>
+<script type="text/javascript" src="/media/js/jquery.base64.min.js"></script>
 <script src="http://ajax.microsoft.com/ajax/jquery.templates/beta1/jquery.tmpl.min.js"></script>
 <script src="http://maps.google.com/maps/api/js?v=3&amp;libraries=adsense&amp;sensor=false"></script>
 <link rel="stylesheet" href="/media/css/openlayers/style.css" type="text/css" />
@@ -160,7 +161,7 @@
                     ),
                     {tipo:this.id+":false:false"}
                 )
-                
+
                 if (this.visible) {
                     this.layer.addFeatures([this.point])
                     this.listo = true
@@ -311,7 +312,7 @@
 
                 var polylinea = new Array()
                 $.each(resultados[porNombre][id], function(key, value) {
-                    var poly = new OpenLayers.Format.WKT().read(value.ruta_corta);
+                    var poly = new OpenLayers.Format.WKT().read($.base64.decode(value.ruta_corta));
                     poly.geometry.transform(proj, map.getProjectionObject())
                     var style = OpenLayers.Util.extend({}, OpenLayers.Feature.Vector.style['default']);
                     style.strokeOpacity = 0.8;
@@ -454,7 +455,7 @@
             function mostrarResultados(data, combinar, porNombre){
                 if ( typeof(porNombre)==='undefined' ) porNombre = false
                 if ( typeof(combinar) ==='undefined' ) combinar  = 'false'
-                
+
                 res = data['resultados']
                 if ( res.length === 0 )
                     if ( pagina == 1 ) {
@@ -464,7 +465,7 @@
                             if (combinar == 'true')
                                 $("#vacio2Templ").tmpl().appendTo($("#sidebarResultados").empty());
                             else
-                                $("#vacio1Templ").tmpl().appendTo($("#sidebarResultados").empty());                        
+                                $("#vacio1Templ").tmpl().appendTo($("#sidebarResultados").empty());
                         bindearEventos();
                     }
                     else
