Cambiando el nombre contenido por información que es mas entendible

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -24,7 +24,7 @@
         </li>
         {% if ciudad_actual %}
             {% if es_vista_mapa %}
-                <li><a href="/{{ciudad_actual.slug}}"><i class="icon-file icon-white"></i> Ir al contenido</a></li>
+                <li><a href="/{{ciudad_actual.slug}}"><i class="icon-file icon-white"></i> Ir a información</a></li>
             {% else %}
                 <li><a href="/mapa/{{ciudad_actual.slug}}"><i class="icon-search icon-white"></i> Ir al buscador</a></li>
             {% endif %}
