--- a/templates/core/buscador.html
+++ b/templates/core/buscador.html
@@ -42,8 +42,8 @@
                     <div id="sidebarResultados"></div>
                 </div>
                 <div class="tab-pane" id="2">
-                    <input type="text" id="inputLinea" class="input-block-level" placeholder="Linea, ramal, recorrido" data-provide="typeahead">
-                    <button class="btn btn-primary" type="submit"><i class="icon-search icon-white"></i> Buscar</button>
+                    <input type="text" id="inputLinea" class="input-block-level" placeholder="Linea, ramal o recorrido">
+                    <button id="button-buscarnombre" class="btn btn-primary" type="submit"><i class="icon-search icon-white"></i> Buscar</button>
                     <hr>
                     <div id="sidebarResultadosPorNombre"></div>
                 </div>
@@ -65,7 +65,6 @@
 
 {% block custom_scripts %}
 <script src="http://openlayers.org/api/OpenLayers.js"></script>
-<script type="text/javascript" src="/media/js/bootstrap-typeahead-gist4699753.js"></script>
 <script type="text/javascript" src="/media/js/jquery.base64.min.js"></script>
 <script src="http://ajax.microsoft.com/ajax/jquery.templates/beta1/jquery.tmpl.min.js"></script>
 <script src="http://maps.google.com/maps/api/js?v=3&amp;libraries=adsense&amp;sensor=false"></script>
@@ -198,7 +197,7 @@
                                 markerB.confirmado = true
                                 piwikLog("/click/mapa/marker/B")
                                 clickHandler.deactivate();
-                                pagina = 1
+                                pagina_input = 1
                                 buscarporclick(markerA.centro, markerB.centro)
                             }
                     }
@@ -223,7 +222,7 @@
                             markerB.confirmado = true
                             piwikLog("/click/mapa/drag/B")
                         }
-                        pagina = 1
+                        pagina_input = 1
                         buscarporclick(markerA.centro, markerB.centro)
                     },
                     onEnter: function(feature, pixel) {
@@ -249,26 +248,6 @@
             clickHandler.activate()
             dragControl.activate()
 
-            // buscador de lineas por sugerencia al tipear
-            $('#inputLinea').attr("autocomplete","off")
-
-            $('#inputLinea').keyup(function (e) {
-                e.preventDefault();
-                recorridos.removeAllFeatures()
-                $("#ajaxLoader").tmpl().appendTo($("#sidebarResultadosPorNombre").empty())
-                if ( ajaxInputLinea ) ajaxInputLinea.abort()
-                pagina = 1
-                inputLinea()
-            })
-
-            function inputLinea() {
-                buscar = false
-                ajaxInputLinea = $.ajax({
-                    url: "/api/recorridos/?c="+GLOBAL_ci+"&q="+$('#inputLinea').val()+"&p="+pagina,
-                    success: function(data) {mostrarResultados(data, false, true)}
-                })
-            }
-
             var adUnitDiv = document.createElement('div');
             var adUnitOptions = {
                 format: google.maps.adsense.AdFormat.HALF_BANNER,
@@ -285,12 +264,14 @@
             resultados[false] = new Object()
             var polylinea  = new Array()
             var polyhover  = new Array()
-            var pagina     = 1
+            var pagina_input     = 1
+            var pagina_nombre    = 1
             var ajaxInputLinea = false
             var buscar     = true //false si busca de A a B, true si busca por nombre de recorrido (es para llamar la funcion correcta al paginar)
 
             // handler para mostrar resultados, usa el template de listado de results
             function mostrar_resultado(id, porNombre) {
+                //console.log(id)
                 var moverMarkers = false;
                 if ( typeof(id)==='undefined' )
                     if (porNombre)
@@ -348,7 +329,7 @@
                         piwikTracker.trackSiteSearch( $("#inputDesde").val(), "Desde", data1.length )
                         piwikTracker.trackSiteSearch( $("#inputHasta").val(), "Hasta", data2.length )
                         $("#listSuggest").tmpl([{ data1: data1, data2: data2 }]).appendTo($("#sidebarResultados").empty())
-                        bindearEventos();
+                        bindearEventos(false);
                     }
                 }
                 $.ajax({
@@ -390,7 +371,7 @@
                 markerA.confirmado = true
                 markerB.confirmado = true
                 if ( markerA.listo && markerB.listo ) {
-                    pagina = 1
+                    pagina_input = 1
                     buscarporclick(markerA.centro, markerB.centro)
                 }
             }
@@ -400,7 +381,7 @@
                 markerA.confirmado = true
                 markerB.confirmado = true
                 if ( markerA.listo && markerB.listo ) {
-                    pagina = 1
+                    pagina_input = 1
                     buscarporclick(markerA.centro, markerB.centro, 'true')
                 }
             }
@@ -409,16 +390,26 @@
             // n = -1: pagina anterior
             //      x: pagina x
             //      0: pagina siguiente
-            function pasarPagina(n, combinar) {
+            function pasarPagina(n, combinar, porNombre) {
                 n = parseInt(n);
-                if ( n < 0 )
-                    pagina = ( pagina > 1 ) ? pagina - 1 : 1;
-                else if ( n == 0 )
-                    pagina+=1;
-                else if ( n > 0)
-                    pagina = n;
+                if (porNombre) {
+                    if ( n < 0 )
+                        pagina_nombre = ( pagina_nombre > 1 ) ? pagina_nombre - 1 : 1;
+                    else if ( n == 0 )
+                        pagina_nombre+=1;
+                    else if ( n > 0)
+                        pagina_nombre = n;
+                }
+                else {
+                    if ( n < 0 )
+                        pagina_input = ( pagina_input > 1 ) ? pagina_input - 1 : 1;
+                    else if ( n == 0 )
+                        pagina_input+=1;
+                    else if ( n > 0)
+                        pagina_input = n;                
+                }
 
-                if ( buscar )
+                if ( !porNombre )
                     buscarporclick(markerA.centro, markerB.centro, combinar);
                 else
                     inputLinea();
@@ -440,7 +431,7 @@
                         radio_origen: "500",
                         radio_destino: "500",
                         c: GLOBAL_ci,
-                        p: pagina,
+                        p: pagina_input,
                         combinar: combinar
                     },
                     function (data){
@@ -458,7 +449,7 @@
 
                 res = data['resultados']
                 if ( res.length === 0 )
-                    if ( pagina == 1 ) {
+                    if ( (porNombre && pagina_nombre == 1) || (!porNombre && pagina_input == 1) ) {
                         if (porNombre)
                             $("#vacioTempl").tmpl().appendTo($("#sidebarResultadosPorNombre").empty());
                         else
@@ -466,10 +457,14 @@
                                 $("#vacio2Templ").tmpl().appendTo($("#sidebarResultados").empty());
                             else
                                 $("#vacio1Templ").tmpl().appendTo($("#sidebarResultados").empty());
-                        bindearEventos();
+                        bindearEventos(porNombre);
                     }
-                    else
-                        pagina -= 1
+                    else {
+                        if (porNombre)
+                            pagina_nombre -= 1
+                        else
+                            pagina_input -= 1
+                    }
                 else {
                     resultados[porNombre] = new Object()
                     $.each(res, function(key, value) {
@@ -495,10 +490,12 @@
                     data['page_list'] = data['page_list'].slice(desde, hasta);
 
                     $("#listTempl").tmpl( [{ data: data }] ).appendTo(divResultados.empty());
-                    bindearEventos();
+                    bindearEventos(porNombre);
                     divResultados.find("[id^=res]").each( function(i) {
                         $(this).children().bind("click", function(e) {
                             id = $(this).attr("id")
+                            //console.log(this)
+                            //console.log(porNombre)
                             mostrar_resultado(id, porNombre)
                             e.preventDefault()
                             if (porNombre)
@@ -511,7 +508,7 @@
                             recorridos.removeFeatures(polyhover)
                             polyhover = new Array();
                             $.each(resultados[porNombre][id], function(key, value) {
-                                var poly = new OpenLayers.Format.WKT().read(value.ruta_corta)
+                                var poly = new OpenLayers.Format.WKT().read($.base64.decode(value.ruta_corta))
                                 poly.geometry.transform(proj, map.getProjectionObject())
                                 var style = OpenLayers.Util.extend({}, OpenLayers.Feature.Vector.style['default']);
                                 style.strokeOpacity = 0.5
@@ -531,6 +528,40 @@
             }
 
             // bind eventos click partes estaticas de la pagina (bind unico)
+            
+            // buscador de lineas por sugerencia al tipear
+            $('#inputLinea').attr("autocomplete","off")
+
+            $('#inputLinea').keypress(function (e) {
+                if (e.which == 13){
+                    e.preventDefault();
+                    piwikLog("/click/buscarNombre/enter/"+$("#inputLinea").val())
+                    buscar_por_nombre()                
+                }
+            })
+            
+            $("#button-buscarnombre").bind("click", function(e) {
+                e.preventDefault();
+                piwikLog("/click/buscarNombre/button/"+$("#inputLinea").val())
+                buscar_por_nombre();
+            })           
+            
+            function buscar_por_nombre() {
+                recorridos.removeAllFeatures()
+                $("#ajaxLoader").tmpl().appendTo($("#sidebarResultadosPorNombre").empty())
+                if ( ajaxInputLinea ) ajaxInputLinea.abort()
+                pagina_nombre = 1
+                inputLinea()  
+            }
+
+            function inputLinea() {
+                buscar = false
+                ajaxInputLinea = $.ajax({
+                    url: "/api/recorridos/?c="+GLOBAL_ci+"&q="+$('#inputLinea').val()+"&p="+pagina_nombre,
+                    success: function(data) {mostrarResultados(data, false, true)}
+                })
+            }
+            
             $("#button-ayuda").bind("click", function(e) {
                 e.preventDefault()
                 $("#ayudaTempl").tmpl().appendTo($("#sidebarResultados").empty());
@@ -545,9 +576,11 @@
             $("#inputDesde").bind("change", invalidarMarkers)
             $("#inputHasta").bind("change", invalidarMarkers)
 
-            function input_press_enter(event){
-                if (event.which == 13){
-                    $("#button-buscarinputs").click();
+            function input_press_enter(e){
+                if (e.which == 13){
+                    e.preventDefault();
+                    piwikLog("/click/buscar/enter/"+$("#inputDesde").val()+"/"+$("#inputHasta").val())
+                    buscar_por_inputs();                    
                 }
             }
 
@@ -586,40 +619,47 @@
             })
 
             // bind eventos click partes dinamicas de la pagina (bind multiple)
-            function bindearEventos() {
-                $("#button_buscar_transbordo:not(binded)").bind("click", function(e) {
-                    e.preventDefault();
-                    piwikLog("/click/buscar/transbordo")
-                    buscarTransbordo();
-                    $(this).addClass("binded");
-                })
+            function bindearEventos(porNombre) {
+                var selectorDiv = '#sidebarResultadosPorNombre'
+                if (!porNombre) {
+                    $("#button_buscar_transbordo:not(binded)").bind("click", function(e) {
+                        e.preventDefault();
+                        piwikLog("/click/buscar/transbordo")
+                        buscarTransbordo();
+                        $(this).addClass("binded");
+                    })
 
-                $("#button-seleccionarSugerencias:not(binded)").bind("click", function(e) {
-                    e.preventDefault();
-                    //trackear nombre de seleccionadas
-                    piwikLog("/click/buscar/suggest/")
-                    seleccionarSugerencias();
-                    $(this).addClass("binded");
-                })
+                    $("#button-seleccionarSugerencias:not(binded)").bind("click", function(e) {
+                        e.preventDefault();
+                        //trackear nombre de seleccionadas
+                        piwikLog("/click/buscar/suggest/")
+                        seleccionarSugerencias();
+                        $(this).addClass("binded");
+                    })
 
-                $(".marcarSuggest:not(binded)").bind("click", function(e) {
-                    e.preventDefault();
-                    marcarPunto(
-                        $(this).attr("data_geom"),
-                        $(this).attr("data_id"),
-                        $(this).attr("data_domId")
-                    );
-                    $(this).addClass("binded");
-                })
+                    $(".marcarSuggest:not(binded)").bind("click", function(e) {
+                        e.preventDefault();
+                        marcarPunto(
+                            $(this).attr("data_geom"),
+                            $(this).attr("data_id"),
+                            $(this).attr("data_domId")
+                        );
+                        $(this).addClass("binded");
+                    })
+                    
+                    selectorDiv = '#sidebarResultados'; 
+                }
 
-                $("div.pagination a[href]:not(binded)").bind("click", function(e) {
+                $(selectorDiv + " div.pagination a[href]:not(binded)").bind("click", function(e) {
                     e.preventDefault();
                     n = $(this).attr("data_pagina");
                     if      ( n <  0 ) pps = "ant";
                     else if ( n == 0 ) pps = "sig";
                     else if ( n >  0 ) pps = n;
                     piwikLog("/click/pagina/"+pps)
-                    pasarPagina($(this).attr("data_pagina"), $(this).attr("combinar"));
+                    pasarPagina($(this).attr("data_pagina"), $(this).attr("combinar"), porNombre);
+                    //console.log("porNombre="+porNombre)
+                    //console.log("n="+n)
                     $(this).addClass("binded");
                 })
             }
