--- a/templates/core/ver_linea.html
+++ b/templates/core/ver_linea.html
@@ -21,6 +21,13 @@
     <div class="thumbnail"><div id="map" style="background:lightblue; height:300px;"></div></div>
     <br />
 
+    {% if linea_actual.info_empresa and linea_actual.info_terminal %}
+        <h3>Información de la empresa</h3>
+        <div>{{linea_actual.info_empresa}}</div>
+        <div>{{linea_actual.info_terminal}}</div>
+        <br />
+    {% endif %}
+
     <h3>Recorridos de la linea {{linea_actual.nombre}}:</h3>
     <table class="table table-striped table-bordered table-condensed">
         <tbody>
