--- a/templates/core/ver_ciudad.html
+++ b/templates/core/ver_ciudad.html
@@ -88,9 +88,10 @@
             {% endfor %}
             </tbody>
         </table>
+        <br />
     {% endif %}
 
-    <!--[if gt IE 7]>
+    <![if (!IE)|(gt IE 7)]>
         <h3>Dejanos un comentario sobre "{{ciudad_actual.nombre}}"</h3>
         <div id="disqus_thread"></div>
         <script type="text/javascript">
@@ -107,7 +108,7 @@
 
         <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
         <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
-    <![endif]-->
+    <![endif]>
 {% endblock %}
 
 {% block custom_ready_function %}
