--- a/templates/core/ver_recorrido.html
+++ b/templates/core/ver_recorrido.html
@@ -10,6 +10,18 @@
 
 {% block custom_scripts %}
     <script type="text/javascript" src="/media/js/jquery.base64.min.js"></script>
+    <script>
+        var recorrido_actual_id = {{recorrido_actual.id}}
+        var GLOBAL_ci = "{{ ciudad_actual.slug }}";
+        var ciudad_actual_coord1 = new Array{{ ciudad_actual.centro.coords }}[0];
+        var ciudad_actual_coord2 = new Array{{ ciudad_actual.centro.coords }}[1];
+        var ciudad_actual_zoom = {{ ciudad_actual.zoom }};
+        var lonlat_ini_coord1 = new Array{{recorrido_actual.ruta|first}}[0];
+        var lonlat_ini_coord2 = new Array{{recorrido_actual.ruta|first}}[1];
+        var lonlat_fin_coord1 = new Array{{recorrido_actual.ruta|last}}[0];
+        var lonlat_fin_coord2 = new Array{{recorrido_actual.ruta|last}}[1];
+    </script>
+    <script type="text/javascript" src="/media/js/vr-1.0.js"></script>
 {% endblock %}
 
 {% block bloque_izquierda %}
@@ -47,57 +59,4 @@
     </script>
     <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
     <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
-{% endblock %}
-
-{% block custom_ready_function %}
-    //Proyeccion que se necesita para transformar proyecciones mas adelante
-    var proj = new OpenLayers.Projection("EPSG:4326");
-
-    //Creamos el mapa
-    map = new OpenLayers.Map("map", {theme: null})
-    var gmap = new OpenLayers.Layer.Google(
-        "Google Streets", {numZoomLevels: 20}
-    );
-    map.addLayers([gmap]);
-    map.setCenter(new OpenLayers.LonLat{{ ciudad_actual.centro.coords }}.transform(
-        new OpenLayers.Projection("EPSG:4326"),
-        map.getProjectionObject()
-    ), {{ ciudad_actual.zoom }});
-
-    //Le agregamos una capa para el poligono de la ciudad
-    var style = {'strokeWidth': 4, 'strokeColor': '#0033CC', fillColor: "#0066CC", fillOpacity: 0.5}
-    var layer_recorrido = new OpenLayers.Layer.Vector("Recorrido", {styleMap: new OpenLayers.StyleMap(style) });
-    map.addLayer(layer_recorrido)
-
-    //Le agregamos una capa para los Markers de inicio y fin
-    var markers = new OpenLayers.Layer.Markers( "Markers" );
-    map.addLayer(markers);
-
-    var size = new OpenLayers.Size(20,50);
-    var offset = new OpenLayers.Pixel(-(size.w/2), -size.h);
-    var iconA = new OpenLayers.Icon('/media/css/openlayers/markerA.png',size,offset);
-    var iconB = new OpenLayers.Icon('/media/css/openlayers/markerB.png',size,offset);
-
-    var lonlat_inicio = new OpenLayers.LonLat{{recorrido_actual.ruta|first}};
-    var lonlat_fin = new OpenLayers.LonLat{{recorrido_actual.ruta|last}};
-
-    lonlat_inicio = lonlat_inicio.transform(proj, map.getProjectionObject());
-    lonlat_fin = lonlat_fin.transform(proj, map.getProjectionObject());
-
-    markers.addMarker(new OpenLayers.Marker(lonlat_inicio, iconA));
-    markers.addMarker(new OpenLayers.Marker(lonlat_fin, iconB));
-
-    $.get("/api/recorridos/{{recorrido_actual.id}}/",
-        function(data) {
-            path_recorrido = new OpenLayers.Format.WKT().read($.base64.decode(data.ruta));
-            path_recorrido.geometry.transform(proj, map.getProjectionObject())
-            layer_recorrido.addFeatures([path_recorrido]);
-
-            //Acomodar el zoom al poligono
-            var extent = new OpenLayers.Bounds();
-            extent.extend(path_recorrido.geometry.getBounds())
-            map.zoomToExtent(extent);
-        },
-        "json"
-    );
 {% endblock %}
