Rename all base64 to RC4

--- a/templates/core/ver_recorrido.html
+++ b/templates/core/ver_recorrido.html
@@ -9,7 +9,7 @@
 {% endblock %}
 
 {% block custom_scripts %}
-    <script type="text/javascript" src="/media/js/jquery.base64.min.js"></script>
+    <script type="text/javascript" src="/media/js/jquery.RC4.min.js"></script>
     <script>
         var recorrido_actual_id = {{recorrido_actual.id}}
         var GLOBAL_ci = "{{ ciudad_actual.slug }}";
