--- a/templates/core/buscador.html
+++ b/templates/core/buscador.html
@@ -62,7 +62,7 @@
 
 {% block custom_scripts %}
 <script src="http://openlayers.org/api/OpenLayers.js"></script>
-<script src="/media/js/jquery.base64.min.js"></script>
+<script src="/media/js/jquery.RC4.min.js"></script>
 <script src="http://ajax.microsoft.com/ajax/jquery.templates/beta1/jquery.tmpl.min.js"></script>
 <script src="http://maps.google.com/maps/api/js?v=3&amp;libraries=adsense&amp;sensor=false"></script>
 <link rel="stylesheet" href="/media/css/openlayers/style.css" type="text/css" />
@@ -72,7 +72,7 @@
     var ciudad_actual_coord1 = new Array{{ ciudad_actual.centro.coords }}[0];
     var ciudad_actual_coord2 = new Array{{ ciudad_actual.centro.coords }}[1];
     var ciudad_actual_zoom = {{ ciudad_actual.zoom }};
-    
+
 </script>
 <script src="/media/js/functions-2.0.js"></script>
 
@@ -162,7 +162,7 @@
             </div>
         </ul>
         </script>
-        
+
         <script id="itemSuggest" type="text/x-jquery-tmpl">
             <li id="sug${domId}{porNombre}">
                 <a class="marcarSuggest" href="#" data_geom="${geom}" data_id="${id}" data_domId="${domId}">${nombre} <span class="distancia">(${(precision*100).toFixed(2)}%)</span></a>
