--- a/templates/core/seleccionar_ciudad.html
+++ b/templates/core/seleccionar_ciudad.html
@@ -10,8 +10,8 @@
 {% block content %}
     <div>
         <div align="center">
-            <h1 style="font-size: 55px;">Bienvenido a Cualbondi!</h1>
-            <p class="lead"><em>Seleccioná tu ciudad para comenzar a buscar...</em></p>
+            <h1>Bienvenido!</h1>
+            <p class="lead"><em>Seleccioná tu ciudad para comenzar a buscar</em></p>
         </div>
         <div class="block-wrapper">
             <div class="floated-left" align="center" style="min-width: 300px; margin-top: 20px;"><img style="min" src="/media/img/isologo.png"></div>
