no andaba el ajax loader

--- a/templates/core/buscador.html
+++ b/templates/core/buscador.html
@@ -78,7 +78,7 @@
 
        <script id="ajaxLoader" type="text/x-jquery-tmpl">
             <center>
-                <img src="{{ STATIS_URL }}img/ajax-loader.gif" />
+                <img src="{{ STATIC_URL }}img/ajax-loader.gif" />
             </center>
         </script>
 
