--- a/templates/core/seleccionar_ciudad.html
+++ b/templates/core/seleccionar_ciudad.html
@@ -1,27 +1,205 @@
-{% extends "base.html" %}
+<!DOCTYPE html>
+<html lang="es">
+    <head>
+	    <meta charset="utf-8">
+        <link rel="icon" type="image/x-icon" href="{{ STATIC_URL }}img/favicon.png" />
+    	<title>Cualbondi - Selección de ciudad</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-{% block title %}Cualbondi - Selección de ciudad{% endblock %}
+        <meta name="google-site-verification" content="NVSk_0zcZdYua2ILJ4L0DvspOCmHujouihZPlo3mDco">
+        <link href="https://plus.google.com/117455886911192315188" rel="publisher">
 
-{% block custom_styles %}
-    <link href="{{ STATIC_URL }}css/seleccionar_ciudad.css" rel="stylesheet" type="text/css" />
-{% endblock %}
+        <!--[if lt IE 9]>
+            <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+            <script src="{{ STATIC_URL }}js/respond.min.js"></script>
+        <![endif]-->
 
-<!--Este es un template distinto a todos, por eso redefine el blocke "content" -->
-{% block content %}
-    <div>
-        <div align="center">
-            <h1>Bienvenido!</h1>
-            <p class="lead"><em>Seleccioná tu ciudad para comenzar a buscar</em></p>
-        </div>
-        <div class="block-wrapper">
-            <div class="floated-left" align="center" style="min-width: 300px; margin-top: 20px;"><img style="min" src="{{ STATIC_URL }}img/isologo.png"></div>
-            <div class="floated-left bs-docs-sidebar" style="min-width: 300px; margin-top: 20px;">
-                <ul class="nav nav-list bs-docs-sidenav">
-                    {% for ciudad in ciudades %}
-                    <li><a href="/mapa/{{ciudad.slug}}/"><i class="icon-chevron-right"></i> {{ciudad.nombre}}</a></li>
-                    {% endfor %}
-                </ul>
+        <style type="text/css">
+            @font-face {
+                font-family: 'opensans_bold';
+                src: url('{{ STATIC_URL }}fonts/OpenSans/opensans-bold-webfont.eot');
+                src: url('{{ STATIC_URL }}fonts/OpenSans/opensans-bold-webfont.eot?#iefix') format('embedded-opentype'),
+                     url('{{ STATIC_URL }}fonts/OpenSans/opensans-bold-webfont.woff') format('woff'),
+                     url('{{ STATIC_URL }}fonts/OpenSans/opensans-bold-webfont.ttf') format('truetype'),
+                     url('{{ STATIC_URL }}fonts/OpenSans/opensans-bold-webfont.svg#open_sansbold') format('svg');
+                font-weight: normal;
+                font-style: normal;
+            }
+
+            html {
+            font-size:100%;
+            }
+
+            * {
+            font-family:opensans_bold;
+            font-weight:400;
+            }
+
+            body {
+            background-color:#42BFE5;
+            padding-top:60px;
+            background-position:0 40px;
+            background-repeat:repeat-x;
+            font-family:opensans_regular;
+            padding-bottom:40px;
+            color:#003B5C;
+            font-size:13px!important;
+            line-height:20px;
+            margin:0;
+            }
+
+            h1 {
+            font-family:opensans_bold;
+            font-size:47px!important;
+            font-weight:400;
+            letter-spacing:-.03em;
+            }
+
+            h1,h2,h3 {
+            line-height:40px;
+            }
+
+            h1,h2,h3,h4,h5,h6 {
+            color:inherit;
+            text-rendering:optimizelegibility;
+            margin:10px 0;
+            }
+
+            .lead {
+            font-weight:200;
+            margin-bottom:20px;
+            font-size:16px;
+            line-height:30px;
+            }
+
+            em {
+            font-style:normal;
+            }
+
+            .block-wrapper {
+            left:50%;
+            margin-left:-285px;
+            position:absolute;
+            }
+
+            .floated-left {
+            float:left;
+            }
+
+            img {
+            border:0 none;
+            height:auto;
+            max-width:100%;
+            vertical-align:middle;
+            }
+
+            .bs-docs-sidebar {
+            margin-left:50px;
+            }
+
+            .bs-docs-sidenav {
+            background-color:#FFF;
+            left:50%;
+            margin-left:-150px;
+            position:relative;
+            width:170px;
+            padding:0;
+            }
+
+            .nav-list {
+            margin-bottom:0;
+            }
+
+            .nav {
+            list-style:none outside none;
+            }
+
+            li {
+            line-height:20px;
+            }
+
+            .bs-docs-sidenav > li > a {
+            background-color:#42BFE5;
+            color:#003B5C;
+            display:block;
+            line-height:27px;
+            text-shadow:none;
+            width:170px;
+            margin:0 0 -1px;
+            padding:8px 14px;
+            }
+
+            a {
+            text-decoration:none;
+            }
+
+            .bs-docs-sidenav .icon-chevron-right {
+            float:right;
+            margin-right:-6px;
+            margin-top:5px;
+            opacity:0.25;
+            }
+
+            .icon-chevron-right {
+            background-image:url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAA4AAAAOCAMAAAAolt3jAAAANlBMVEUAAAD///8ZGRn////Dw8POzs4ZGRkeHh47OztNTU0ZGRkcHBw+Pj46OjopKSkuLi4wMDAzMzNlH5mGAAAADnRSTlMABA8oNUCfoa63z9Db5x1axSsAAAA8SURBVAjXY2AgArBxMSHz+Pi5kfgcgoLIfGZOAnxeIJ8dYZiAoCAPC8JoII+VESsPZBESD2gwMg/Ih/IA8tgCoHv5ktQAAAAASUVORK5CYII=");
+            }
+
+            [class^=icon-],[class*=" icon-"] {
+            background-repeat:no-repeat;
+            display:inline-block;
+            height:14px;
+            line-height:14px;
+            vertical-align:text-top;
+            width:14px;
+            }
+
+            .bs-docs-sidenav > li > a:hover {
+                background-color: #42BFE5;
+                color: #E6F6FF;
+            }
+            .nav > li > a:hover {
+                text-decoration: none;
+            }
+            a:hover, a:active {
+                outline: 0 none;
+            }
+            .bs-docs-sidenav a:hover .icon-chevron-right {
+                opacity: 0.5;
+            }
+
+            @media (max-width: 650px) {
+                .bs-docs-sidenav {
+                    margin-left: -100px;
+                }
+                .block-wrapper {
+                    margin-left: -150px; 
+                }
+                .bs-docs-sidebar {
+                    margin-left: 0;
+                }
+            }
+        </style>
+	</head>
+	<body>
+
+        <div>
+            <div align="center">
+                <h1>Bienvenido!</h1>
+                <p class="lead"><em>Seleccioná tu ciudad para comenzar a buscar</em></p>
+            </div>
+            <div class="block-wrapper">
+                <div class="floated-left" align="center" style="min-width: 300px; margin-top: 20px;"><img style="min" src="{{ STATIC_URL }}img/isologo.png"></div>
+                <div class="floated-left bs-docs-sidebar" style="min-width: 300px; margin-top: 20px;">
+                    <ul class="nav nav-list bs-docs-sidenav">
+                        {% for ciudad in ciudades %}
+                        <li><a href="/mapa/{{ciudad.slug}}/"><i class="icon-chevron-right"></i> {{ciudad.nombre}}</a></li>
+                        {% endfor %}
+                    </ul>
+                </div>
             </div>
         </div>
-    </div>
-{% endblock %}
+
+        {% include "tracking.html" %}
+
+	</body>
+</html>
