--- a/templates/contenido.html
+++ b/templates/contenido.html
@@ -18,16 +18,61 @@
             </div>
             <div id="bloque_derecha" class="span3">
                 {% block bloque_derecha %}
+                    <div align="center" style="margin-bottom:15px;">
+                        <script type="text/javascript"><!--
+                        google_ad_client = "ca-pub-1193419141108967";
+                        /* contenido_sidebar_1 */
+                        google_ad_slot = "2452705946";
+                        google_ad_width = 300;
+                        google_ad_height = 250;
+                        //-->
+                        </script>
+                        <script type="text/javascript"
+                        src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+                        </script>
+                    </div>
                     <!--CAJA DE FACEBOOK-->
                     <![if (!IE)|(gt IE 7)]>
-                        <div align="center"><iframe src="//www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.com%2Fcualbondi&amp;width=290&amp;height=360&amp;colorscheme=light&amp;show_faces=true&amp;border_color&amp;stream=false&amp;header=false" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:290px; height:360px;" allowTransparency="true"></iframe></div>
+                        <div align="center" style="margin-bottom:15px;"><iframe src="//www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.com%2Fcualbondi&amp;width=300&amp;height=360&amp;colorscheme=light&amp;show_faces=true&amp;border_color&amp;stream=false&amp;header=false" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:300px; height:360px;" allowTransparency="true"></iframe></div>
                     <![endif]>
 
+                    <div align="center" style="margin-bottom:15px;">
+                        <script type="text/javascript"><!--
+                        google_ad_client = "ca-pub-1193419141108967";
+                        /* contenido_sidebar_2 */
+                        google_ad_slot = "6882905540";
+                        google_ad_width = 300;
+                        google_ad_height = 250;
+                        //-->
+                        </script>
+                        <script type="text/javascript"
+                        src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+                        </script>
+                    </div>
+
                     <!--CAJA DE TWITTER-->
-                    <![if (!IE)|(gt IE 7)]>
-                        <a class="twitter-timeline" href="https://twitter.com/CualBondi" data-widget-id="293142996935905280">Tweets por @CualBondi</a>
-                        <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-                    <![endif]>
+                    <div align="center" style="margin-bottom:15px;">
+                        <div style="width:300px;">
+                        <![if (!IE)|(gt IE 7)]>
+                            <a class="twitter-timeline" href="https://twitter.com/CualBondi" data-widget-id="293142996935905280">Tweets por @CualBondi</a>
+                            <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+                        <![endif]>
+                        </div>
+                    </div>
+
+                    <div align="center" style="margin-bottom:15px;">
+                        <script type="text/javascript"><!--
+                        google_ad_client = "ca-pub-1193419141108967";
+                        /* contenido_sidebar_3 */
+                        google_ad_slot = "9836371941";
+                        google_ad_width = 300;
+                        google_ad_height = 250;
+                        //-->
+                        </script>
+                        <script type="text/javascript"
+                        src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+                        </script>
+                    </div>
 
                 {% endblock %}
             </div>
