--- a/templates/core/buscador.html
+++ b/templates/core/buscador.html
@@ -47,6 +47,19 @@
             </div>
             <div id="sidebarContenido"></div>
         </div>
+        <div align="center">
+            <script type="text/javascript"><!--
+            google_ad_client = "ca-pub-1193419141108967";
+            /* Anuncio 234x60 n1 */
+            google_ad_slot = "9820069640";
+            google_ad_width = 234;
+            google_ad_height = 60;
+            //-->
+            </script>
+            <script type="text/javascript"
+            src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+            </script>
+        </div>
     </div>
     <div id="bloque_derecha">
         <div id="mapa" class="shadowbox"></div>
