--- a/apps/core/static/css/buscador.css
+++ b/apps/core/static/css/buscador.css
@@ -1,6 +1,11 @@
-div {  }
 div.tab-pane { overflow: hidden; }
 div#mapa { width: 100%; height: 100%; }
+
+@import url(http://fonts.googleapis.com/css?family=Open+Sans);
+* {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 0.985em;
+}
 
 @media (min-width: 980px) {
     body { padding-top: 40px; overflow: hidden; }
