--- a/templates/core/buscador.html
+++ b/templates/core/buscador.html
@@ -80,7 +80,7 @@
 <script src="http://openlayers.org/api/OpenLayers.js"></script>
 <script src="{{ STATIC_URL }}js/jquery.RC4.min.js"></script>
 <script src="http://ajax.microsoft.com/ajax/jquery.templates/beta1/jquery.tmpl.min.js"></script>
-<script src="http://maps.google.com/maps/api/js?v=3&amp;libraries=adsense&amp;sensor=false"></script>
+<script src="http://maps.google.com/maps/api/js?v=3&amp;sensor=false"></script>
 <link rel="stylesheet" href="{{ STATIC_URL }}css/openlayers/style.css" type="text/css" />
 
 <script>
