detalle de texto

--- a/templates/core/buscador.html
+++ b/templates/core/buscador.html
@@ -193,7 +193,7 @@
         </script>
 
         <script id="ayudaTempl" type="text/x-jquery-tmpl">
-           <h3>¿Como busco recorridos?</h3>
+           <h3>Ayuda</h3>
            <h4>Campos de búsqueda</h4>
            <p>Escriba directamente en los campos de texto del panel superior. Puede considerar interseccion de calles, calle y número o lugares de interes. Vea los ejemplos debajo de los campos de búsqueda.</p>
            <h4>Click sobre el mapa</h4>
